more settings fixes for oauth doctor

--- a/app/views/doctors/show.html.erb
+++ b/app/views/doctors/show.html.erb
@@ -1,4 +1,24 @@
 <h1> Waiting Roomm </h1>
+
+<% if notice %>
+<p class="alert alert-success"><%= notice %></p>
+<% end %>
+<% if alert %>
+<p class="alert alert-danger"><%= alert %></p>
+<% end %>
+
+
+<p class="navbar-text pull-right">
+  <% if doctor_signed_in? %>
+  Logged in as <strong><%= current_doctor.email %></strong><br>
+  <%= link_to 'edit profile', edit_doctor_registration_path, :class => 'navbar-link', id: "edit"%> |
+  <%= link_to "logout", destroy_doctor_session_path, method: :delete, :class => 'navbar-link', id: "logout" %>
+  <% else %>
+  <%= link_to "Sign up", new_doctor_registration_path, :class => 'navbar-link'  %> |
+  <%= link_to "Login", new_doctor_session_path, :class => 'navbar-link'  %>
+  <% end %>
+</p>
+
 <table class="tg">
   <tr>
     <td class="tg-031e">Appt.</td>
