--- a/app/assets/javascripts/patient.js.erb
+++ b/app/assets/javascripts/patient.js.erb
@@ -1,28 +1,28 @@
 var appointment = "";
 
 $(function() {
-    $('#calendar').fullCalendar({
-        googleCalendarApiKey: 'AIzaSyB2nCL_6SDCvC8RIHC_HLqENabze0FSvMs',
-        businessHours: {
-          start: '7:00:00',
-          end: '21:00:00'
-        },
-        views:{
-          agenda: {
-            minTime: "07:00:00",
-            maxTime: "21:00:00"
-          }
-        },
-        height: 300,
-        events: {
-            googleCalendarId: $('body').data("current-patient-email")
-        },
-        defaultView: 'agendaDay',
-        eventClick: function(event) {
-          this.href = "";
-          appointment = event.title;
-        } ,
-    });
+    // $('#calendar').fullCalendar({
+    //     googleCalendarApiKey: 'AIzaSyB2nCL_6SDCvC8RIHC_HLqENabze0FSvMs',
+    //     businessHours: {
+    //       start: '7:00:00',
+    //       end: '21:00:00'
+    //     },
+    //     views:{
+    //       agenda: {
+    //         minTime: "07:00:00",
+    //         maxTime: "21:00:00"
+    //       }
+    //     },
+    //     height: 300,
+    //     events: {
+    //         googleCalendarId: $('body').data("current-patient-email")
+    //     },
+    //     defaultView: 'agendaDay',
+    //     eventClick: function(event) {
+    //       this.href = "";
+    //       appointment = event.title;
+    //     } ,
+    // });
 });
 
 $("#chosenDoctor").on("click",function(){
