--- a/app/assets/javascripts/doctors.js.erb
+++ b/app/assets/javascripts/doctors.js.erb
@@ -88,6 +88,10 @@ debugger
 
     events: {
       googleCalendarId: 'n825ka53ioka43rmf80b9pagn4@group.calendar.google.com',
+      type: 'POST',
+      data: {
+        
+      }
       color: 'yellow',
       textColor: 'black',
     },
