--- a/app/views/doctors/index.html.erb
+++ b/app/views/doctors/index.html.erb
@@ -1,175 +1,123 @@
-<!-- <head> -->
-  <!-- <meta charset="utf-8"> -->
-  <!-- <title>jQuery UI Dialog - Modal form</title> -->
-  <!-- <link rel="stylesheet" href="//code.jquery.com/ui/1.11.4/themes/smoothness/jquery-ui.css"> -->
-  <!-- <script src="//code.jquery.com/jquery-1.10.2.js"></script> -->
-  <!-- <script src="//code.jquery.com/ui/1.11.4/jquery-ui.js"></script> -->
-  <!-- <link rel="stylesheet" href="/resources/demos/style.css"> -->
+<!doctype html>
+<html lang="en">
+<!-- <head>
+  <meta charset="utf-8">
+  <title>jQuery UI Dialog - Modal form</title>
+  <link rel="stylesheet" href="//code.jquery.com/ui/1.11.4/themes/smoothness/jquery-ui.css">
+  <script src="//code.jquery.com/jquery-1.10.2.js"></script>
+  <script src="//code.jquery.com/ui/1.11.4/jquery-ui.js"></script>
+  <link rel="stylesheet" href="/resources/demos/style.css">
   <style>
-    /*body { font-size: 62.5%; }*/
-    /*label, input { display:block; }*/
-    /*input.text { margin-bottom:12px; width:95%; padding: .4em; }*/
-    /*fieldset { padding:0; border:0; margin-top:25px; }*/
-    /*h1 { font-size: 1.2em; margin: .6em 0; }*/
-    /*div#users-contain { width: 350px; margin: 20px 0; }*/
-    /*div#users-contain table { margin: 1em 0; border-collapse: collapse; width: 100%; }*/
-    /*div#users-contain table td, div#users-contain table th { border: 1px solid #eee; padding: .6em 10px; text-align: left; }*/
-    /*.ui-dialog .ui-state-error { padding: .3em; }*/
-    /*.validateTips { border: 1px solid transparent; padding: 0.3em; }*/
+    body { font-size: 62.5%; }
+    label, input { display:block; }
+    input.text { margin-bottom:12px; width:95%; padding: .4em; }
+    fieldset { padding:0; border:0; margin-top:25px; }
+    h1 { font-size: 1.2em; margin: .6em 0; }
+    div#events-contain { width: 350px; margin: 20px 0; }
+    div#events-contain table { margin: 1em 0; border-collapse: collapse; width: 100%; }
+    div#events-contain table td, div#events-contain table th { border: 1px solid #eee; padding: .6em 10px; text-align: left; }
+    .ui-dialog .ui-state-error { padding: .3em; }
+    .validateTips { border: 1px solid transparent; padding: 0.3em; }
   </style>
-
   <script>
-    // $(function() {
-    //   var dialog, form,
-   
-    //     // From http://www.whatwg.org/specs/web-apps/current-work/multipage/states-of-the-type-attribute.html#e-mail-state-%28type=email%29
-    //     emailRegex = /^[a-zA-Z0-9.!#$%&'*+\/=?^_`{|}~-]+@[a-zA-Z0-9](?:[a-zA-Z0-9-]{0,61}[a-zA-Z0-9])?(?:\.[a-zA-Z0-9](?:[a-zA-Z0-9-]{0,61}[a-zA-Z0-9])?)*$/,
-    //     summary = $( "#summary" ),
-    //     start = $( "#start" ),
-    //     password = $( "#password" ),
-    //     allFields = $( [] ).add( summary ).add( start ).add( password ),
-    //     tips = $( ".validateTips" );
-   
-    //   function updateTips( t ) {
-    //     tips
-    //       .text( t )
-    //       .addClass( "ui-state-highlight" );
-    //     setTimeout(function() {
-    //       tips.removeClass( "ui-state-highlight", 1500 );
-    //     }, 500 );
-    //   }
-   
-    //   function checkLength( o, n, min, max ) {
-    //     if ( o.val().length > max || o.val().length < min ) {
-    //       o.addClass( "ui-state-error" );
-    //       updateTips( "Length of " + n + " must be between " +
-    //         min + " and " + max + "." );
-    //       return false;
-    //     } else {
-    //       return true;
-    //     }
-    //   }
-   
-    //   function checkRegexp( o, regexp, n ) {
-    //     if ( !( regexp.test( o.val() ) ) ) {
-    //       o.addClass( "ui-state-error" );
-    //       updateTips( n );
-    //       return false;
-    //     } else {
-    //       return true;
-    //     }
-    //   }
-   
-    //   function addEvent() {
-    //     var valid = true;
-    //     allFields.removeClass( "ui-state-error" );
-   
-    //     valid = valid && checkLength( summary, "username", 3, 16 );
-    //     valid = valid && checkLength( start, "start", 6, 80 );
-    //     valid = valid && checkLength( password, "password", 5, 16 );
-   
-    //     valid = valid && checkRegexp( summary, /^[a-z]([0-9a-z_\s])+$/i, "Username may consist of a-z, 0-9, underscores, spaces and must begin with a letter." );
-    //     valid = valid && checkRegexp( start, emailRegex, "eg. ui@jquery.com" );
-    //     valid = valid && checkRegexp( password, /^([0-9a-zA-Z])+$/, "Password field only allow : a-z 0-9" );
-    //     // add to ajax call
-    //     if ( valid ) {
-    //       $("#calendar").append( "<tr>" +
-    //         "<td>" + summary.val() + "</td>" +
-    //         "<td>" + start.val() + "</td>" +
-    //         "<td>" + end.val() + "</td>" +
-    //       "</tr>" );
-    //       dialog.dialog( "close" );
-    //     }
-    //     return valid;
-    //   }
-   
-    //   dialog = $( "#dialog-form" ).dialog({
-    //     autoOpen: false,
-    //     height: 300,
-    //     width: 350,
-    //     modal: true,
-    //     buttons: {
-    //       "Create an event": addEvent,
-    //       Cancel: function() {
-    //         dialog.dialog( "close" );
-    //       }
-    //     },
-    //     close: function() {
-    //       form[ 0 ].reset();
-    //       allFields.removeClass( "ui-state-error" );
-    //     }
-    //   });
-   
-    //   form = dialog.find( "form" ).on( "submit", function( event ) {
-    //     event.preventDefault();
-    //     addEvent();
-    //   });
-   
-    //   $( "#create-event" ).button().on( "click", function() {
-    //     dialog.dialog( "open" );
-    //   });
-    // });
+  $(function() {
+    var dialog, form,
+ 
+      // From http://www.whatwg.org/specs/web-apps/current-work/multipage/states-of-the-type-attribute.html#e-mail-state-%28type=start%29
+      startRegex = /^[a-zA-Z0-9.!#$%&'*+\/=?^_`{|}~-]+@[a-zA-Z0-9](?:[a-zA-Z0-9-]{0,61}[a-zA-Z0-9])?(?:\.[a-zA-Z0-9](?:[a-zA-Z0-9-]{0,61}[a-zA-Z0-9])?)*$/,
+      summary = $( "#summary" ),
+      start = $( "#start" ),
+      end = $( "#end" ),
+      allFields = $( [] ).add( summary ).add( start ).add( end ),
+      tips = $( ".validateTips" );
+ 
+    function updateTips( t ) {
+      tips
+        .text( t )
+        .addClass( "ui-state-highlight" );
+      setTimeout(function() {
+        tips.removeClass( "ui-state-highlight", 1500 );
+      }, 500 );
+    }
+ 
+    function checkLength( o, n, min, max ) {
+      if ( o.val().length > max || o.val().length < min ) {
+        o.addClass( "ui-state-error" );
+        updateTips( "Length of " + n + " must be between " +
+          min + " and " + max + "." );
+        return false;
+      } else {
+        return true;
+      }
+    }
+ 
+    function checkRegexp( o, regexp, n ) {
+      if ( !( regexp.test( o.val() ) ) ) {
+        o.addClass( "ui-state-error" );
+        updateTips( n );
+        return false;
+      } else {
+        return true;
+      }
+    }
+ 
+    function addEvent() {
+      var valid = true;
+      allFields.removeClass( "ui-state-error" );
+ 
+      valid = valid && checkLength( summary, "eventsummary", 3, 16 );
+      valid = valid && checkLength( start, "start", 6, 80 );
+      valid = valid && checkLength( end, "end", 5, 16 );
+ 
+      valid = valid && checkRegexp( summary, /^[a-z]([0-9a-z_\s])+$/i, "Eventsummary may consist of a-z, 0-9, underscores, spaces and must begin with a letter." );
+      valid = valid && checkRegexp( start, startRegex, "eg. ui@jquery.com" );
+      valid = valid && checkRegexp( end, /^([0-9a-zA-Z])+$/, "End field only allow : a-z 0-9" );
+ 
+      if ( valid ) {
+        $( "#events tbody" ).append( "<tr>" +
+          "<td>" + summary.val() + "</td>" +
+          "<td>" + start.val() + "</td>" +
+          "<td>" + end.val() + "</td>" +
+        "</tr>" );
+        dialog.dialog( "close" );
+      }
+      return valid;
+    }
+ 
+    dialog = $( "#dialog-form" ).dialog({
+      autoOpen: false,
+      height: 300,
+      width: 350,
+      modal: true,
+      buttons: {
+        "Create an account": addEvent,
+        Cancel: function() {
+          dialog.dialog( "close" );
+        }
+      },
+      close: function() {
+        form[ 0 ].reset();
+        allFields.removeClass( "ui-state-error" );
+      }
+    });
+ 
+    form = dialog.find( "form" ).on( "submit", function( event ) {
+      event.preventDefault();
+      addEvent();
+    });
+ 
+    $( "#create-event" ).button().on( "click", function() {
+      dialog.dialog( "open" );
+    });
+  });
   </script>
-<!-- </head> -->
+</head>
+ -->
+<body>
+<%#= render 'form' %>
 
-<!-- <body> -->
-  <!-- <div id="dialog-form" title="Create new event"> -->
-    <!-- <p class="validateTips">All form fields are required.</p> -->
-    <!-- <form> -->
-      <!-- <fieldset> -->
-        <!-- <label for="summary">Summary</label> -->
-        <!-- <input type="text" name="summary" id="summary" placeholder="Title" class="text ui-widget-content ui-corner-all"> -->
-        <!-- <label for="start">Start</label> -->
-        <!-- <input type="text" name="start" id="start" placeholder="date" class="text ui-widget-content ui-corner-all"> -->
-        <!-- <label for="end">End</label> -->
-        <!-- <input type="text" name="end" id="end" placeholder="end" class="text ui-widget-content ui-corner-all"> -->
-        <!-- <label for="password">Password</label> -->
-        <!-- <input type="password" name="password" id="password" value="xxxxxxx" class="text ui-widget-content ui-corner-all"> -->
-   
-        <!-- Allow form submission with keyboard without duplicating the dialog button -->
-        <!-- <input type="submit" tabindex="-1" style="position:absolute; top:-1000px"> -->
-      <!-- </fieldset> -->
-    <!-- </form> -->
-  <!-- </div> -->
-  <!-- <div id="users-contain" class="ui-widget">
-    <h1>Existing Users:</h1>
-    <table id="users" class="ui-widget ui-widget-content">
-      <thead>
-        <tr class="ui-widget-header ">
-          <th>Name</th>
-          <th>Email</th>
-          <th>Password</th>
-        </tr>
-      </thead>
-      <tbody>
-        <tr>
-          <td>John Doe</td>
-          <td>john.doe@example.com</td>
-          <td>johndoe1</td>
-        </tr>
-      </tbody>
-    </table>
-  </div> -->
-  <!-- <button id="create-event">Create new event</button> -->
-<!-- </body> -->
-
-<%= link_to 'New Event', '#new_event_modal', 'data-toggle' => 'modal' %>
-
-<%# Bootstrap modal markup. @see: http://getbootstrap.com/javascript/#modals %>
-<div class="modal fade" id="new_event_modal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
-  <div class="modal-dialog">
-    <div class="modal-content">
-      <div class="modal-header">
-        <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-        <h4 class="modal-title" id="myModalLabel">Create new event</h4>
-      </div>
-      <div class="modal-body">
-        <%# Render the new event form (passing modal => true to enable remote => true) %>
-        <%= render 'form', modal: true %>
-      </div>
-      <div class="modal-footer">
-        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-      </div>
-    </div>
-  </div>
-</div>
+<!-- <button id="create-event">Create new event</button>
+ -->
+<div class="calendar"></div>
+</body>
+</html>
