--- a/app/assets/javascripts/doctors.js.erb
+++ b/app/assets/javascripts/doctors.js.erb
@@ -62,7 +62,7 @@ debugger
           data: myEvent,
           dataType: "JSON",
           success: refreshCalendar,
-          error: errorHandler,
+          error: errorHandler
         });
       };
     },
@@ -89,12 +89,10 @@ debugger
     events: {
       googleCalendarId: 'n825ka53ioka43rmf80b9pagn4@group.calendar.google.com',
       type: 'POST',
-      data: {
-        
-      }
+      data: '',
       color: 'yellow',
-      textColor: 'black',
-    },
+      textColor: 'black'
+    }
   });
 });
 
