--- a/app/views/doctors/_form.html.erb
+++ b/app/views/doctors/_form.html.erb
@@ -5,9 +5,9 @@
       <label for="summary">Summary</label>
       <input type="text" name="summary" id="summary" placeholder="Summary" class="text ui-widget-content ui-corner-all">
       <label for="start">Start</label>
-      <input type="text" name="start" id="start" placeholder="Start" class="text ui-widget-content ui-corner-all">
+      <input type="text" name="start" id="start" placeholder="Start Date" class="text ui-widget-content ui-corner-all">
       <label for="end">End</label>
-      <input type="end" name="end" id="end" placeholder="End" class="text ui-widget-content ui-corner-all">
+      <input type="end" name="end" id="end" placeholder="End Date" class="text ui-widget-content ui-corner-all">
  
       <!-- Allow form submission with keyboard without duplicating the dialog button -->
       <input type="submit" tabindex="-1" style="position:absolute; top:-1000px">
