--- a/app/views/doctors/index.html.erb
+++ b/app/views/doctors/index.html.erb
@@ -1,9 +1,9 @@
 <h1>Doctors#index</h1>
 <br><br><br>
 
-<%= button_to "Add Event", root_path, method: :get %>
-<!-- <div id="calendar"></div>
- -->
+<%#= button_to "Add Event", root_path, method: :get %>
+<!-- <div id="calendar"></div> -->
+
 <style type="text/css">
   .iframe {
     width: 80%;
@@ -12,5 +12,5 @@
 </style>
 
 <div class="iframe">
-<iframe src="https://www.google.com/calendar/embed?src=n825ka53ioka43rmf80b9pagn4%40group.calendar.google.com&ctz=America/New_York" align="middle" frameborder="0" scrolling="no" height="800" width="1200" seamless></iframe>
+  <iframe src="https://www.google.com/calendar/embed?src=n825ka53ioka43rmf80b9pagn4%40group.calendar.google.com&ctz=America/New_York" align="middle" frameborder="0" scrolling="no" height="800" width="1200" seamless></iframe>
 </div>
