--- a/app/assets/javascripts/doctors.js.erb
+++ b/app/assets/javascripts/doctors.js.erb
@@ -6,18 +6,18 @@ $(".doctors.index").ready(function(){
     weekends: false,
     businessHours: {
       start: '09:00', // a start time (9am in this example)
-      end: '17:00', // an end time (5pm in this example)
+      end: '17:30', // an end time (5pm in this example)
       dow: [ 1, 2, 3, 4, 5]
       // days of week. an array of zero-based day of week integers (0=Sunday)
       // (Monday-Thursday in this example)
     },
-    height: 650,
+    height: 500,
     defaultView: 'agendaWeek',
     eventLimit: true, // allow "more" link when too many events
     views: {
       agenda: {
         minTime: "08:00:00",
-        maxTime: "17:00:00"
+        maxTime: "18:00:00"
       }
     },
     events: {
@@ -42,13 +42,13 @@ $(".doctors.index").ready(function(){
 
   $(function() {
     var dialog, form,
- 
+
       // From http://www.whatwg.org/specs/web-apps/current-work/multipage/states-of-the-type-attribute.html#e-mail-state-%28type=start%29
       startRegex = /^[a-zA-Z0-9.!#$%&'*+\/=?^_`{|}~-]+@[a-zA-Z0-9](?:[a-zA-Z0-9-]{0,61}[a-zA-Z0-9])?(?:\.[a-zA-Z0-9](?:[a-zA-Z0-9-]{0,61}[a-zA-Z0-9])?)*$/,
-      summary = $( "#summary" ),
-      start = $( "#start" ),
-      end = $( "#end" ),
-      allFields = $( [] ).add( summary ).add( start ).add( end ),
+      purpose = $( "#purpose" ),
+      appointment = $( "#appointment" ),
+      email = $( "#email" ),
+      allFields = $( [] ).add( purpose ).add( appointment ).add( email ),
       tips = $( ".validateTips" );
  
     function updateTips( t ) {
@@ -85,19 +85,19 @@ $(".doctors.index").ready(function(){
     //   var valid = true;
     //   allFields.removeClass( "ui-state-error" );
  
-    //   valid = valid && checkLength( summary, "eventsummary", 3, 16 );
-    //   valid = valid && checkLength( start, "start", 6, 80 );
-    //   valid = valid && checkLength( end, "end", 5, 16 );
+    //   valid = valid && checkLength( purpose, "eventpurpose", 3, 16 );
+    //   valid = valid && checkLength( appointment, "appointment", 6, 80 );
+    //   valid = valid && checkLength( email, "email", 5, 16 );
  
-    //   valid = valid && checkRegexp( summary, /^[a-z]([0-9a-z_\s])+$/i, "Eventsummary may consist of a-z, 0-9, underscores, spaces and must begin with a letter." );
-    //   valid = valid && checkRegexp( start, startRegex, "eg. ui@jquery.com" );
-    //   valid = valid && checkRegexp( end, /^([0-9a-zA-Z])+$/, "End field only allow : a-z 0-9" );
+    //   valid = valid && checkRegexp( purpose, /^[a-z]([0-9a-z_\s])+$/i, "Eventpurpose may consist of a-z, 0-9, underscores, spaces and must begin with a letter." );
+    //   valid = valid && checkRegexp( appointment, startRegex, "eg. ui@jquery.com" );
+    //   valid = valid && checkRegexp( email, /^([0-9a-zA-Z])+$/, "Email field only allow : a-z 0-9" );
  
     //   if ( valid ) {
     //     $( "#events tbody" ).append( "<tr>" +
-    //       "<td>" + summary.val() + "</td>" +
-    //       "<td>" + start.val() + "</td>" +
-    //       "<td>" + end.val() + "</td>" +
+    //       "<td>" + purpose.val() + "</td>" +
+    //       "<td>" + appointment.val() + "</td>" +
+    //       "<td>" + email.val() + "</td>" +
     //     "</tr>" );
     //     dialog.dialog( "close" );
     //   }
@@ -111,22 +111,21 @@ $(".doctors.index").ready(function(){
       console.log("error: ", error);
     };
     function addEvent(event, refreshCalendar, errorHandler) {
+      // $.post('/doctors/' + 1 + '/send_appointment'){
+      //   data: ""
+      // }
+
+
       $.ajax({
         type: "POST",
-        url: "https://www.googleapis.com/calendar/v3/calendars/n825ka53ioka43rmf80b9pagn4%40group.calendar.google.com/events?fields=summary%2Cstart%2Cend&key={<%= GOOGLE_CALENDAR_CLIENT_ID %>}",
+        url: "/doctors/" + 1 + "/send_appointment",
         data: {
-         start: {
-          dateTime: start.val()
-         },
-         summary: summary.val(),
-         end: {
-          dateTime: end.val()
-         }
         },
         dataType: "JSON",
         success: refreshCalendar,
         error: errorHandler,
       });
+      console.log("Jim, we have a problem");
       dialog.dialog("close");
     };
 
