--- a/app/views/doctors/_form.html.erb
+++ b/app/views/doctors/_form.html.erb
@@ -2,13 +2,14 @@
   <p class="validateTips">All form fields are required.</p>
   <form>
     <fieldset>
-      <label for="summary">Summary</label>
-      <input type="text" name="summary" id="summary" placeholder="Summary" class="text ui-widget-content ui-corner-all">
-      <label for="start">Start</label>
-      <input type="text" name="start" id="start" placeholder="Start Date" class="text ui-widget-content ui-corner-all">
-      <label for="end">End</label>
-      <input type="end" name="end" id="end" placeholder="End Date" class="text ui-widget-content ui-corner-all">
- 
+      <label for="purpose">Purpose</label>
+      <input type="text" name="purpose" id="purpose" class="text ui-widget-content ui-corner-all">
+      <label for="appointment">Appointment Time</label>
+      <input type="text" name="appointment" id="appointment" class="text ui-widget-content ui-corner-all">
+      <!-- <label for="end">End</label> -->
+      <!-- <input type="text" name="end" id="end" placeholder="End Date" class="text ui-widget-content ui-corner-all"> -->
+      <label for="email">Email</label>
+      <input type="text" name="email" id="email" class="text ui-widget-content ui-corner-all">
       <!-- Allow form submission with keyboard without duplicating the dialog button -->
       <input type="submit" tabindex="-1" style="position:absolute; top:-1000px">
     </fieldset>
